# acado

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  appveyor.yml  index.html  params.json
acado/: CMakeLists.txt
acado/clock/: clock.cpp  real_clock.cpp  simulation_clock.cpp
acado/code_generation/: export_acado_function.cpp  export_algorithm.cpp  export_argument.cpp  export_argument_internal.cpp  export_argument_list.cpp  export_arithmetic_statement.cpp  export_auxiliary_functions.cpp  export_auxiliary_functions.hpp  export_cholesky_decomposition.cpp  export_common_header.cpp  export_common_header.hpp  export_data.cpp  export_data_declaration.cpp  export_data_internal.cpp  export_data_internal.hpp  export_exact_hessian_cn2.cpp  export_exact_hessian_cn2.hpp  export_exact_hessian_cn2_new.cpp  export_exact_hessian_cn2_new.hpp  export_exact_hessian_qpdunes.cpp  export_file.cpp  export_forces_generator.cpp  export_forces_generator.hpp  export_function.cpp  export_function_call.cpp  export_function_call.hpp  export_function_declaration.cpp  export_gauss_newton_block_cn2.cpp  export_gauss_newton_block_cn2.hpp  export_gauss_newton_block_forces.cpp  export_gauss_newton_block_forces.hpp  export_gauss_newton_block_qpdunes.cpp  export_gauss_newton_block_qpdunes.hpp  export_gauss_newton_cn2.cpp  export_gauss_newton_cn2.hpp  export_gauss_newton_cn2_factorization.cpp  export_gauss_newton_cn2_new.cpp  export_gauss_newton_cn2_new.hpp  export_gauss_newton_condensed.cpp  export_gauss_newton_forces.cpp  (+38 more)
acado/conic_program/: banded_cp.cpp
acado/conic_solver/: condensing_based_cp_solver.cpp  dense_cp_solver.cpp
acado/constraint/: boundary_constraint.cpp  box_constraint.cpp  constraint_element.cpp  coupled_path_constraint.cpp  path_constraint.cpp  point_constraint.cpp
acado/control_law/: linear_state_feedback.cpp  pid_controller.cpp  static_feedback_law.hp
acado/controller/: controller.cpp
acado/curve/: curve.cpp
acado/dynamic_discretization/: collocation_method.cpp  dynamic_discretization.cpp  shooting_method.cpp
acado/dynamic_system/: dynamic_system.cpp
acado/estimator/: dynamic_estimator.cpp  estimator.cpp  kalman_filter.cpp
acado/function/: c_operator.cpp  differential_equation.cpp  discretized_differential_equation.cpp  evaluation_point.cpp  function.cpp  function_evaluation_tree.cpp  output_fcn.cpp  transition.cpp
acado/integrator/: integrator_bdf.cpp  integrator_discretized_ode.cpp  integrator_lyapunov.cpp  integrator_lyapunov45.cpp  integrator_runge_kutta.cpp  integrator_runge_kutta12.cpp  integrator_runge_kutta23.cpp  integrator_runge_kutta45.cpp  integrator_runge_kutta78.cpp
acado/matrix_vector/: block_matrix.cpp  matrix.hpp  matrix_vector_tools.hpp  vector.hpp
acado/nlp_derivative_approximation/: bfgs_update.cpp  constant_hessian.cpp  exact_hessian.cpp  gauss_newton_approximation.cpp  gauss_newton_approximation_bfgs.cpp  nlp_derivative_approximation.cpp
acado/nlp_solver/: scp_evaluation.cpp  scp_merit_function.cpp  scp_method.cpp  scp_method.hpp  scp_step.cpp  scp_step_fullstep.cpp  scp_step_linesearch.cpp
acado/noise/: colored_noise.cpp  gaussian_noise.cpp  noise.cpp  uniform_noise.cpp
acado/objective/: lagrange_term.cpp  lsq_term.cpp  lsq_term.ipp  objective_element.cpp
acado/ocp/: model_container.cpp  model_container.hpp  model_data.cpp  model_data.hpp  multi_objective_functionality.cpp  ocp.cpp  ocp.hpp
acado/optimization_algorithm/: mhe_algorithm.cpp  multi_objective_algorithm.cpp  optimization_algorithm.cpp  optimization_algorithm.hpp  optimization_algorithm_base.cpp  parameter_estimation_algorithm.cpp  weight_generation.cpp
acado/process/: process.cpp
acado/reference_trajectory/: adaptive_reference_trajectory.cpp  periodic_reference_trajectory.cpp  reference_trajectory.cpp  simulated_reference_trajectory.cpp  static_reference_trajectory.cpp
acado/set_arithmetics/: interval.cpp  taylor_model.ipp
acado/simulation_environment/: simulation_block.cpp  simulation_environment.cpp
acado/sparse_solver/: conjugate_gradient_method.cpp  normal_conjugate_gradient_method.cpp  sparse_solver.cpp  symmetric_conjugate_gradient_method.cpp
acado/symbolic_expression/: acado_syntax.cpp  expression.cpp  lyapunov.cpp
acado/symbolic_operator/: acos.cpp  asin.cpp  atan.cpp  binary_operator.cpp  cos.cpp  exp.cpp  logarithm.cpp  operator.cpp  power.cpp  powerint.cpp  sin.cpp  symbolic_index_list.cpp  tan.cpp  tree_projection.cpp
acado/transfer_device/: actuator.cpp  transfer_device.cpp
acado/user_interaction/: log_record.cpp  options.cpp  options_list.cpp  options_list.hpp  plot_collection.cpp  plot_window.cpp  plot_window_subplot.cpp  plotting.cpp  user_interaction.cpp
acado/utils/: acado_io_utils.cpp  acado_io_utils.hpp  acado_message_handling.cpp  acado_message_handling.hpp  acado_types.hpp  acado_utils.cpp
acado/validated_integrator/: ellipsoidal_integrator.cpp
acado/variables_grid/: grid.cpp  matrix_variables_grid.cpp  variable_settings.cpp
examples/: .gitignore  CMakeLists.txt  Makefile
examples/basic_data_structures/: Makefile
examples/code_generation/: CMakeLists.txt  Makefile  crane.cpp  getting_started_closed_loop.cpp
examples/controller/: Makefile  getting_started.cpp  getting_started_classical.cpp  ref.txt
examples/getting_started/: Makefile  data.txt  dev_simple_parameter_estimation.cpp  plotting.cpp  simple_function1.cpp  simple_function2.cpp  simple_mpc.cpp  simple_ocp.cpp  symbolic_algebra.cpp
examples/integration_algorithm/: Makefile  getting_started.cpp  getting_started_discretized.cpp  pendulum.cpp  simple_dae.cpp  wave_energy.cpp
examples/integrator/: Makefile  backward_differentiation.cpp  chemical_rate_equations.cpp  cstr.cpp  forward_differentiation.cpp  getting_started.cpp  getting_started_discretized.cpp  harmonic_oscillator.cpp  hydroscal.cpp  hydroscal_model.hpp  pendulum.cpp  pendulum_C.cpp  simple_dae.cpp  simple_dae_c.cpp  transition.cpp  wave_energy.cpp
examples/multi_objective/: Makefile  car_nbi.cpp  car_nnc.cpp  car_ws.cpp  (+27 more)
tests/: CMakeLists.txt  matrix_vector.cpp
(+1675 files in other folders)
